kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vaultwarden-deployment
  namespace: vaultwarden
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vaultwarden
  template:
    metadata:
      labels:
        app: vaultwarden
    spec:
      imagePullSecrets:
      - name: secret-registry
      containers:
        - name: vaultwarden
          image: 878893543361.dkr.ecr.us-east-1.amazonaws.com/mvarela-io/vaultwarden:4d77382f5fa4b8d2c16477f977e62673013348ea
          ports:
            - containerPort: 80
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: vaultwarden-pvc
